# PythonCppExtension

./: .gitignore  CMakeLists.txt  README.md  WinDbg.pyproj  another_pyobject.cpp  another_pyobject.h  build.bat  build_bdist.bat  build_bdist.sh  gdb.sh  gdbinit  init.sh  main.py  my_class_py_type.cpp  my_class_py_type.h  my_cpp_class.cpp  my_cpp_class.h  my_module.cpp  my_py_module.cpp  myclass.cpp  myclass.h  mymath.c  mymath.cpp  pydbg.cpp  pyproject.toml  setup.cfg  setup.py
.github/workflows/: build_wheels.yml
tests/: division.h  get_func.h  set_string.h  test_myclass.h
