[metadata]
name = MyModule
version = 0.0.1
# version = attr: my_package.VERSION
description = Example C/C++ extension module
long_description = Does nothing except incremention a number
license = GPLv3
classifiers = 
    Operating System::Microsoft
    Operating System::POSIX::Linux
    Programming Language::C++
